updated styles for login and signup. fixed spacing issues on profile page and swapped out toggle icons

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -127,8 +127,28 @@ h6 {
 }
 
 #results {
-  width: 100%;
   height: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  .results-container {
+    height: 50%;
+    overflow-y: scroll;
+
+    .event-card {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+
+  .results-map-container {
+    height: 40%;
+  }
 }
 
 // create event page
@@ -182,6 +202,10 @@ h6 {
       color: $dark-grey;
       line-height: 1.25;
       margin: 5px 0;
+    }
+
+    .toggle {
+      border: none;
     }
     .card-body {
       background-color: white;
@@ -260,92 +284,9 @@ h6 {
   }
 }
 
-#rsvp-btn {
-  box-shadow:inset 0px 1px 0px 0px #9acc85;
-	background:linear-gradient(to bottom, #74ad5a 5%, #68a54b 100%);
-	background-color: $success;
-	border:1px solid #3b6e22;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-size:13px;
-	font-weight:bold;
-	padding: 6px 76px;
-	text-decoration:none;
-}
-#rsvp-btn:hover {
-	background-color:#5cbf2a;
-}
-#rsvp-btn:active {
-	position:relative;
-	top:10px;
-}
-
-#login-btn1 {
-  box-shadow:inset 0px 1px 0px 0px #9acc85;
-	background-color: $success;
-	border:1px solid #3b6e22;
-	display: inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-size:13px;
-	font-weight:bold;
-	padding: 6px 88px;
-	text-decoration:none;
-}
-
-#signup-btn1, #login-btn2 {
-	background-color: lightgray;
-	border:1px solid $primary;
-	display:inline-block;
-	cursor:pointer;
-	color: $primary;
-	font-size:13px;
-	font-weight:bold;
-	padding: 6px 83px;
-	text-decoration:none;
-}
-
-#signup-btn2 {
-  box-shadow:inset 0px 1px 0px 0px #9acc85;
-	background-color: $success;
-	border:1px solid #3b6e22;
-	display: inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-size:13px;
-	font-weight:bold;
-	padding: 6px 78px;
-	text-decoration:none;
-}
-
-#btn-signup{
-  padding-bottom: 15px;
-}
-
-#rsvp-btn:hover {
-	background-color:#5cbf2a;
-}
-#rsvp-btn:active {
-	position:relative;
-	top:10px;
-}
-
-//single event page
-#card2 {
-  background-color: lightgrey;
-  height: 37rem;
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.7);
-  color: white;
-}
-
 #login, #signup {
-  background-color: lightgrey;
-  height: 25rem;
+  background-color: $light-grey;
+  height: 28rem;
   width: 21rem;
   border-radius: 25px;
   display: flex;
@@ -356,12 +297,17 @@ h6 {
   padding: 1.5rem;
 
   h2 {
-    color:$dark-blue
+    color: $dark-blue;
+    font-size: 2.5rem;
   }
 }
 
-#pwd{
-  padding-bottom: 20px;
+.signup-btn:hover, .login-btn:hover {
+  color: white;
+
+  a {
+    color: black;
+  }
 }
 
 .comment-info {
@@ -463,6 +409,29 @@ h6 {
       text-align: left;
     }
   }
+
+  #results {
+    .row {
+      justify-content: center;
+
+      .results-container {
+        .event-card {
+          display: flex;
+          flex-direction: row;
+          justify-content: flex-start;
+          align-items: center;
+    
+          .event-img {
+            width: 40%;
+          }
+        }
+      }
+
+      .results-map-container {
+        height: 50%;
+      }
+    }
+  }
 }
 
 // breakpoints for large devices
@@ -520,6 +489,30 @@ h6 {
 
       .btn {
         width: 150px;
+      }
+    }
+  }
+
+  #results {
+    .row {
+      justify-content: center;
+
+      .results-container {
+        height: 100%;
+        
+        .event-card {
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+    
+          .event-img {
+            width: 100%;
+          }
+        }
+      }
+
+      .results-map-container {
+        height: 100%;
       }
     }
   }
